SystemUI: Simplify profile export/import using Files stdlib